pdfdatadir = $(prefix)/data

pdfdata = \
	basis2		\
	pdfkwd.mpac	\
	alias.mpac	\
	harris.mpac

dist_pdfdata_DATA = $(pdfdata)
pdfdata_DATA = $(pdfdata)

guessdbdata = \
	fl_GuessDB/fl_Gdb_Atom			\
	fl_GuessDB/fl_Gdb_Atom.full		\
	fl_GuessDB/fl_Gdb_Atom.new		\
	fl_GuessDB/fl_Gdb_Atom.old		\
	fl_GuessDB/fl_Gdb_Camino		\
	fl_GuessDB/fl_Gdb_Camino.header		\
	fl_GuessDB/fl_Gdb_Molecular		\
	fl_GuessDB/fl_Gdb_Molecular.header	\
	fl_GuessDB/fl_Gdb_Molecular.tmp		\
	fl_GuessDB/fl_Gdb_Namino		\
	fl_GuessDB/fl_Gdb_Namino.header		\
	fl_GuessDB/fl_Gdb_Namino.tmp		\
	fl_GuessDB/fl_Gdb_Peptid		\
	fl_GuessDB/fl_Gdb_Peptid.header		\
	fl_GuessDB/fl_Gdb_UserMolec		\
	fl_GuessDB/fl_Gdb_UserMolec.header

guessdbdatadir=$(prefix)/data/fl_GuessDB
dist_guessdbdata_DATA = $(guessdbdata)
guessdbdata_DATA = $(guessdbdata)

