pkginclude_HEADERS = \
	pdflib-int.h			\
	TlLogging.h			\
	TlSystem.h			\
	TlFile.h			\
	TlResidue.h			\
	TlVector.h			\
	TlAtom.h			\
	TlMath.h			\
	TlParameter.h			\
	TlSimpleVector.h		\
	TlVectorObject.h		\
	TlFmt.h				\
	TlPosition.h			\
	TlListMatrix.h			\
	TlGetopt.h			\
	TlMatrixObject.h		\
	TlMatrix.h			\
	TlSymmetricMatrix.h		\
	TlFileMatrix.h			\
	TlFileSymmetricMatrix.h		\
	TlSparseMatrix.h		\
	TlSparseSymmetricMatrix.h	\
	TlSparseVectorMatrix.h		\
	TlRowVectorMatrix.h			\
	TlColVectorMatrix.h			\
	TlMemManager.h			\
	TlPrdctbl.h			\
	TlStringTokenizer.h		\
	TlUtils.h			\
	TlSerializeData.h		\
	TlPseudoYaml.h			\
	TlMsgPack.h			\
	TlTime.h			\
	\
	scalapack.h			\
	TlCommunicate.h			\
	TlDistributeMatrix.h		\
	TlDistributeSymmetricMatrix.h	\
	TlDistributeVector.h		\
	TlPartialMatrix.h		\
	TlPartialSymmetricMatrix.h	

