pkginclude_HEADERS = \
	pdflib-int.h				\
	TlLogging.h					\
	TlSystem.h					\
	TlFile.h					\
	TlResidue.h					\
	TlVector.h					\
	TlAtom.h					\
	TlMath.h					\
	TlSimpleVector.h			\
	TlVectorObject.h			\
	TlFmt.h						\
	TlPosition.h				\
	TlListMatrix.h				\
	TlGetopt.h					\
	TlMatrixObject.h			\
	TlMatrix.h					\
	TlSymmetricMatrix.h			\
	TlFileMatrix.h				\
	TlFileSymmetricMatrix.h		\
	TlSparseMatrix.h			\
	TlSparseSymmetricMatrix.h	\
	TlSparseVector.h			\
	TlSparseVectorMatrix.h		\
	TlVectorMatrixObject.h		\
	TlRowVectorMatrix.h			\
	TlColVectorMatrix.h			\
	TlMemManager.h				\
	TlPrdctbl.h					\
	TlStringTokenizer.h			\
	TlUtils.h					\
	TlSerializeData.h			\
	TlSharedPointer.h			\
	TlPseudoYaml.h				\
	TlMsgPack.h					\
	TlTime.h					\
	TlStlUtils.h				\
	TlLebedevGrid.h				\
	TlDeleter.h					\
	\
	scalapack.h					\
	TlCommunicate.h				\
	TlDistributeMatrix.h		\
	TlDistributeSymmetricMatrix.h	\
	TlDistributeVector.h		\
	TlPartialMatrix.h			\
	TlPartialSymmetricMatrix.h	

