bin_script_src = \
	pdf-serial.sh		\
	pdf-parallel.sh		\
	pdf-printenv.sh		\
	pdf-setup.sh		\
	pdf-clean.sh


bin_SCRIPTS = $(bin_script_src)
dist_bin_SCRIPTS = $(bin_script_src)


#install-exec-hook:
#	cd $(DESTDIR)$(bindir) && \
#	for PROG in $(bin_script_src); do \
#		echo $${PROG%.*}; \
#		$(LN_S) -f $${PROG} $${PROG%.*}; \
#	done

