cmake_minimum_required(VERSION 2.8)

set(LIBPDF_HEADERS
  CnError.h                       
  DfCD.h                          
  DfCalcGrid.h                    
  DfCalcGridX.h                   
  DfCleanup.h                     
  DfConvcheck.h                   
  DfConverge.h                    
  DfConverge_Anderson.h           
  DfConverge_DIIS.h               
  DfConverge_Damping.h            
  DfCqclomatrix.h                 
  DfDensityFittingObject.h        
  DfDensityFittingX.h             
  DfDiagonal.h                    
  DfDiffDensityMatrix.h           
  DfDmatrix.h                     
  DfEngineObject.h                
  DfEriEngine.h                   
  DfEriObject.h                   
  DfEriX.h                        
  DfFockMatrix.h                  
  DfForce.h                       
  DfFunctional.h                  
  DfFunctional_B3LYP.h            
  DfFunctional_B88LYP.h           
  DfFunctional_Becke88.h          
  DfFunctional_Becke88_ExceptLDA.h
  DfFunctional_HFS.h             
  DfFunctional_LYP.h             
  DfFunctional_PW91X.h           
  DfFunctional_SVWN.h            
  DfFunctional_Slater.h          
  DfFunctional_VWN.h             
  DfFunctional_VWN3.h            
  DfGenerateGrid.h               
  DfGridFreeXC.h                 
  DfHpqEngine.h                  
  DfHpqX.h                       
  DfInfo.h                       
  DfInitialGuess.h               
  DfInitialGuessHarris.h         
  DfInitialGuessHuckel.h         
  DfInputdata.h               
  DfIntegrals.h               
  DfInvMatrix.h               
  DfJMatrix.h                 
  DfKMatrix.h                 
  DfLevelshift.h              
  DfObject.h                  
  DfOverlapEngine.h           
  DfOverlapX.h                
  DfPopulation.h              
  DfPreScf.h                  
  DfQclo.h                    
  DfScf.h                     
  DfSummary.h                 
  DfTaskCtrl.h                
  DfThreeindexintegrals.h     
  DfTotalEnergy.h             
  DfTransFmatrix.h            
  DfTransatob.h               
  DfXCFunctional.h            
  DfXMatrix.h                 
  DfXcenefitting.h            
  Fl_Db_Basis.h               
  Fl_Fragment.h               
  Fl_Geometry.h               
  Fl_Gto.h                    
  Fl_Tbl_AtomFragment.h       
  Fl_Tbl_Fragment.h           
  Fl_Vct_OtableX.h            
  Fl_Vct_Table.h              
  PdfKeyword.h                
  PdfUserInput.h              
  PdfUtils.h                  
  ProteinDF.h
  TlAngularMomentumVector.h   
  TlAngularMomentumVectorSet.h
  TlCombineDensityMatrix.h
  TlMatrixCache.h        
  TlOrbitalInfo.h        
  TlOrbitalInfoObject.h  
  TlOrbitalInfo_Density.h
  TlOrbitalInfo_XC.h
  )


set(LIBPDF_SOURCES
  CnError.cxx
  DfCD.cpp
  DfCalcGrid.cpp
  DfCalcGridX.cpp
  DfCleanup.cpp
  DfConvcheck.cxx
  DfConverge.cpp
  DfConverge_Anderson.cpp
  DfConverge_DIIS.cpp
  DfConverge_Damping.cpp
  DfCqclomatrix.cxx
  DfDensityFittingX.cpp
  DfDiagonal.cxx
  DfDiffDensityMatrix.cpp
  DfDmatrix.cxx
  DfEriEngine.cpp
  DfEriX.cpp
  DfFockMatrix.cpp
  DfForce.cpp
  DfFunctional.cpp
  DfFunctional_B3LYP.cpp
  DfFunctional_B88LYP.cpp
  DfFunctional_Becke88.cpp
  DfFunctional_Becke88_ExceptLDA.cpp
  DfFunctional_HFS.cpp
  DfFunctional_LYP.cpp
  DfFunctional_PW91X.cpp
  DfFunctional_SVWN.cpp
  DfFunctional_Slater.cpp
  DfFunctional_VWN.cpp
  DfFunctional_VWN3.cpp
  DfGenerateGrid.cpp
  DfGridFreeXC.cpp
  DfHpqEngine.cpp
  DfHpqX.cpp
  DfInfo.cpp
  DfInitialGuess.cpp
  DfInitialGuessHarris.cpp
  DfInitialGuessHuckel.cpp
  DfInputdata.cxx
  DfIntegrals.cxx
  DfInvMatrix.cpp
  DfJMatrix.cpp
  DfKMatrix.cpp
  DfLevelshift.cxx
  DfObject.cpp
  DfOverlapEngine.cpp
  DfOverlapX.cpp
  DfPopulation.cxx
  DfPreScf.cpp
  DfQclo.cxx
  DfScf.cxx
  DfSummary.cxx
  DfTaskCtrl.cpp
  DfThreeindexintegrals.cxx
  DfTotalEnergy.cpp
  DfTransFmatrix.cxx
  DfTransatob.cxx
  DfXCFunctional.cpp
  DfXMatrix.cpp
  DfXcenefitting.cxx
  Fl_Db_Basis.cxx
  Fl_Fragment.cxx
  Fl_Geometry.cxx
  Fl_Gto.cxx
  Fl_Tbl_AtomFragment.cxx
  Fl_Tbl_Fragment.cxx
  Fl_Vct_OtableX.cpp
  Fl_Vct_Table.cpp
  PdfKeyword.cpp  
  PdfUserInput.cpp
  PdfUtils.cpp
  ProteinDF.cxx
  TlAngularMomentumVector.cpp   
  TlAngularMomentumVectorSet.cpp
  TlCombineDensityMatrix.cpp
  TlMatrixCache.cpp        
  TlOrbitalInfo.cpp        
  TlOrbitalInfoObject.cpp  
  TlOrbitalInfo_Density.cpp
  TlOrbitalInfo_XC.cpp
  )


set(LIBPPDF_HEADERS
  DfCD_Parallel.h                 
  DfCalcGridX_Parallel.h          
  DfCleanup_Parallel.h            
  DfConvcheck_Parallel.h          
  DfConverge_Anderson_Parallel.h  
  DfConverge_Damping_Parallel.h   
  DfDensityFittingX_Parallel.h    
  DfDensityFittingX_ScaLAPACK.h   
  DfDiagonal_Parallel.h           
  DfDiffDensityMatrix_Parallel.h  
  DfDmatrix_Parallel.h            
  DfEriX_Parallel.h               
  DfFockMatrix_Parallel.h         
  DfForce_Parallel.h              
  DfGenerateGrid_Parallel.h      
  DfGridFreeXC_Parallel.h        
  DfHpqX_Parallel.h              
  DfInitialGuess_Parallel.h   
  DfInitialGuessHarris_Parallel.h
  DfInitialGuessHuckel_Parallel.h
  DfInputdata_Parallel.h      
  DfIntegrals_Parallel.h      
  DfInvMatrix_Parallel.h      
  DfJMatrix_Parallel.h        
  DfKMatrix_Parallel.h        
  DfOverlapX_Parallel.h       
  DfPopulation_Parallel.h     
  DfPreScf_Parallel.h         
  DfScf_Parallel.h            
  DfSummary_Parallel.h        
  DfTaskCtrl_Parallel.h       
  DfTotalEnergy_Parallel.h    
  DfTransFmatrix_Parallel.h   
  DfTransatob_Parallel.h      
  DfXCFunctional_Parallel.h   
  DfXMatrix_Parallel.h
  ProteinDF_Parallel.h
  )


set(LIBPPDF_SOURCES
  DfCD_Parallel.cpp                
  DfCalcGridX_Parallel.cpp         
  DfCleanup_Parallel.cpp           
  DfConvcheck_Parallel.cpp         
  DfConverge_Anderson_Parallel.cpp 
  DfConverge_Damping_Parallel.cpp  
  DfDensityFittingX_Parallel.cpp   
  DfDensityFittingX_ScaLAPACK.cpp  
  DfDiagonal_Parallel.cpp          
  DfDiffDensityMatrix_Parallel.cpp 
  DfDmatrix_Parallel.cpp           
  DfEriX_Parallel.cpp              
  DfFockMatrix_Parallel.cpp        
  DfForce_Parallel.cpp             
  DfGenerateGrid_Parallel.cpp      
  DfGridFreeXC_Parallel.cpp        
  DfHpqX_Parallel.cpp              
  DfInitialGuessHarris_Parallel.cpp
  DfInitialGuessHuckel_Parallel.cpp
  DfInitialGuess_Parallel.cpp   
  DfInputdata_Parallel.cpp      
  DfIntegrals_Parallel.cpp      
  DfInvMatrix_Parallel.cpp      
  DfJMatrix_Parallel.cpp        
  DfKMatrix_Parallel.cpp        
  DfOverlapX_Parallel.cpp       
  DfPopulation_Parallel.cpp     
  DfPreScf_Parallel.cpp         
  DfScf_Parallel.cpp            
  DfSummary_Parallel.cpp        
  DfTaskCtrl_Parallel.cpp       
  DfTotalEnergy_Parallel.cpp    
  DfTransFmatrix_Parallel.cpp   
  DfTransatob_Parallel.cpp      
  DfXCFunctional_Parallel.cpp   
  DfXMatrix_Parallel.cpp
  ProteinDF_Parallel.cpp
  )


add_library(libpdf ${LIBPDF_HEADERS} ${LIBPDF_SOURCES})
set_target_properties(libpdf PROPERTIES OUTPUT_NAME "pdf")

if (MPI_FOUND)
  add_library(libppdf ${LIBPPDF_HEADERS} ${LIBPPDF_SOURCES})
  set_target_properties(libppdf PROPERTIES OUTPUT_NAME "ppdf")
endif()

#  DfEnergyWeightedDensityMatrix.h 
#  DfEnergyWeightedDensityMatrix.cpp
#  DfGrid_Common.cxx                
#  DfRLMO.cpp                    
#  DfRLMO.h                    
